<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.EditarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <TextView
            android:id="@+id/tvTitleAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="Edita Monster"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPickPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="Elije la imagen de tu Monster"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib1"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_margin="1dp"
                android:background="@drawable/asset01" />

            <ImageButton
                android:id="@+id/ib2"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/asset02" />

            <ImageButton
                android:id="@+id/ib3"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/asset03" />

            <ImageButton
                android:id="@+id/ib4"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/asset04" />

            <ImageButton
                android:id="@+id/ib5"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/asset05" />

            <ImageButton
                android:id="@+id/ib6"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/asset06" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPickedPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="Monster Seleccionado"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivPickedPic"
            android:layout_width="80dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/nombre"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIntTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/inteligencia"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etInt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:ems="3"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/fealdad"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etFea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:ems="3"
                android:inputType="textPersonName"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/maldad"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etMal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:ems="3"
                android:inputType="textPersonName"
                android:textSize="20dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPointsEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="999"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tvPointTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="points"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="Editar"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="Volver"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>